--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
+    "@types/lodash": "^4.14.182",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "antd": "^4.20.5",
+    "lodash": "^4.17.21",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
