--- a/package.json
+++ b/package.json
@@ -23,19 +23,22 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build-directory": "ts-node --skip-project build-directory.ts public/directory.json",
+    "build-directory": "cross-env AWS_PROFILE=emandres ts-node --skip-project build-directory.ts public/directory.json",
     "build": "npm run build-directory && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "aws s3 sync build/ s3://nase-erc --profile emandres",
+    "deploy": "npm run predeploy && aws s3 sync build/ s3://nase-erc --profile emandres",
     "sync-assets": "aws s3 sync ../nase-erc-assets s3://nase-erc-assets --profile emandres"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "import/no-anonymous-default-export": "off"
+    }
   },
   "browserslist": {
     "production": [
@@ -52,6 +55,7 @@
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.118.1",
     "@types/node": "^17.0.35",
+    "cross-env": "^7.0.3",
     "gh-pages": "^3.2.3",
     "md5": "^2.3.0",
     "react": "^17.0.2",
