--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^17.0.11",
     "antd": "^4.20.5",
     "lodash": "^4.17.21",
+    "platform": "^1.3.6",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -55,6 +56,7 @@
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.118.1",
     "@types/node": "^17.0.35",
+    "@types/platform": "^1.3.4",
     "cross-env": "^7.0.3",
     "gh-pages": "^3.2.3",
     "md5": "^2.3.0",
