--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "erc-material",
+  "name": "nase-helping-hands",
   "homepage": "https://emandres.github.io/",
   "version": "1.0.100",
   "private": true,
