--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^4.20.5",
     "lodash": "^4.17.21",
     "platform": "^1.3.6",
+    "react-icons": "^4.6.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
