--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "aws s3 sync build/ s3://nase-erc --profile emandres",
+    "deploy": "aws s3 sync build/ s3://nase-disaster-relief",
     "sync-assets": "aws s3 sync ../nase-erc-assets s3://nase-erc-assets --exclude */.DS_Store --exclude .DS_Store --profile emandres"
   },
   "eslintConfig": {
